--- a/24_fd_Burrito_aymanH_andrewP_ravenT/index.html
+++ b/24_fd_Burrito_aymanH_andrewP_ravenT/index.html
@@ -19,12 +19,12 @@
                 <!-- Dropdown feature -->
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    DROPPPPP
+                    Duckies
                     </button>
                     <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">ping pong</a></li>
-                    <li><a class="dropdown-item" href="#">basketball</a></li>
-                    <li><a class="dropdown-item" href="#">dodgeball</a></li>
+                    <li><a class="dropdown-item" href="#">Potato</a></li>
+                    <li><a class="dropdown-item" href="#">Baefy</a></li>
+                    <li><a class="dropdown-item" href="#">Boofy</a></li>
                     </ul>
                 </div>
               </li>
@@ -37,13 +37,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Broke</a>
+                    <a class="nav-link" href="#">Potato</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Rich</a>
+                    <a class="nav-link" href="#">Baefy</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled">Boofy</a>
                   </li>
                 </ul>
               </div>
@@ -55,13 +55,12 @@
         <!-- Tables -->
         <div class = "container">
             <div class = "row">
-                <div class = "col"> Jeffrey </div>
-                <div class = "col"> Weichen </div>
-                <div class = "col"> Lebron </div>
-                <div class = "col"> Tennis </div>
+                <div class = "col"> Potato </div>
+                <div class = "col"> Baefy </div>
+                <div class = "col"> Boofy </div>
             </div>
             <div class = "row">
-                <div class = "col"> Zou </div>
+                <div class = "col"> Potato  </div>
                 <div class = "col"> Liu </div>
                 <div class = "col"> James </div>
                 <div class = "col"> Ball </div>
