--- a/24_fd_Burrito_aymanH_andrewP_ravenT/index.html
+++ b/24_fd_Burrito_aymanH_andrewP_ravenT/index.html
@@ -14,7 +14,7 @@
         <!-- Navbar feature -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Balls</a>
+              <a class="navbar-brand" href="#">Burrito</a>
               <li>
                 <!-- Dropdown feature -->
                 <div class="dropdown">
@@ -51,6 +51,17 @@
           </nav>
 
         <br>
+
+        <div class = "container">
+          <div class = "row">
+            <div class = "col"> What is a "DUCKY"?</div>
+          </div>
+          <div class = "row">
+            <div class = "col"> A ducky is your partner. The one that stays with you through all your hardships, all your successes. A Ducky will be with you for the rest of your journey.</div>
+          </div>
+        </div>
+
+        <br>
         
         <!-- Tables -->
         <div class = "container">
@@ -60,20 +71,15 @@
                 <div class = "col"> Boofy </div>
             </div>
             <div class = "row">
-                <div class = "col"> Potato  </div>
-                <div class = "col"> Liu </div>
-                <div class = "col"> James </div>
-                <div class = "col"> Ball </div>
+                <div class = "col"> Potato was raised on a farm. When he met Baefy and Boofy, he was not ready to get his world rocked.</div>
+                <div class = "col"> Baefy, born and raised in Brooklyn, has always loved the city. But meeting Potato allowed him to learn about the trials and tribulations of country life. </div>
+                <div class = "col"> Boofy has always been an enigma, no one understood them. But Baefy and Potato were the first ones to give them a home. </div>
             </div>
         </div>
 
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    </body>
+ </body>
 
 
 </html>
-Footer
-© 2022 GitHub, Inc.
-Footer navigation
 
