--- a/p01_misc/game.html
+++ b/p01_misc/game.html
@@ -1,10 +1,19 @@
-<div class="row">
-    <div class="column">
-        <img src="img_1.jpg" style="width:100%">
-    </div>
-</div>
-<div class="row">
-    <div class="column">
-        <img src="img_2.jpg" style="width:100%">
-    </div>
-</div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title> Higher or Lower </title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <div class="clearfix">
+            <div class="img-container">
+                <img src="img_1.jpg" style="width:100%">
+            </div>
+            <div class="img-container">
+                <img src="img_2.jpg" style="width:100%">
+            </div>
+        </div>
+    </body>
+</html>
