--- a/pages/site.html
+++ b/pages/site.html
@@ -3,11 +3,11 @@
 
 <link href="styles.css" rel="stylesheet">
 <head>
-	<title>TWICE</title>
+	<title>SASS</title>
 </head>
 <body>
 	<header>
-		<img class="logo" src="images/twicelogo.png" alt="Twice's official logo">
+		<img class="logo" src="images/sasslogo.png" alt="SASS logo">
 		<nav>
 			<ul class="nav__links">
 				<li class="navbar"><a href="site.html"><p class="chosen">Who is TWICE?</p></a></li>
@@ -17,33 +17,31 @@
 			</ul>
 		</nav>
 	</header>
-	<h2>Who is TWICE?</h2>
-	<figure>
-			<p class="aligncenter">
-				<img src="images/tw5.jpg" height="400px">
-				<figcaption>The members of TWICE. From left to right: Nayeon, Momo, Chaeyoung, Sana, Mina, Tzuyu, Jihyo, Jeongyeon, and Dahyun.</figcaption>
-			</p>
-			</figure>
+	<h2>SASS!</h2>
 		<div class="normal">	
-		<h3 class="inoutset">"TWICE"?</h3>
+		<h3 class="inoutset">What is "SASS"?</h3>
 		<div class="container">
-			<figure>
-			<img class="main" src="images/tw2.jpg" height="250px">
-			<figcaption>TWICE for Marie Claire, August 2018.</figcaption>	
-			</figure>
-			<p><a class="mainp" href="https://en.wikipedia.org/wiki/Twice">TWICE</a> is a female Korean pop group consisting of nine members under <a class="mainp" href="https://en.wikipedia.org/wiki/JYP_Entertainment">JYP Entertainment</a>. They debuted in 2015 and have been together ever since. They have released four studio albums, two compilation albums, four reissues, nine extended plays, one compilation extended play, and twenty seven singles as of now, and are the highest-selling girl group in South Korea. </p>
+			<div style="font-weight:bold; font-size:larger">
+				<b>S</b>yntactically<br>
+				<b>A</b>wesome<br>
+				<b>S</b>tyle<br>
+				<b>S</b>heets<br>
+			</div>	
+			<p>Sass has features that don't exist in CSS yet like nesting, mixins, inheritance, and other nifty goodies that help you write robust, maintainable CSS.
+			</p>
+
 		</div>
-				<h3 class="inoutset">The Beginning</h3>	
+		<h3 class="inoutset">Into to SASS</h3>	
 			<div class="container"> 
-				<figure>
-				<img class="main" src="images/16lineup.jpg" height="250px">
-				<figcaption>The starting line up of <em>Sixteen</em> with Park Jinyoung.</figcaption>	
-				</figure>
 				<div class="vertical">
-				<p>On May 5, 2015, The reality girl group show <a class="mainp" href="https://en.wikipedia.org/wiki/Sixteen_(TV_series)"><em>Sixteen</em></a> first aired. This show pitted sixteen female trainees from the JYP Entertainment company against each other in order to earn a spot in the new girl group TWICE.
+				<h4>TWO SYNTAXES!</h4>
+				<p>
+					<ul>.scss - most common</ul> 
+					<ul><img src="images/scss_ex.png" width=50%></ul>
+					<ul>.sass - more unusual, indented syntax</ul>
+					<ul><img src="images/sass_ex.png" width=50%></ul>
 				</p>
-				<p>The show not only tested the girls' singing and dancing talents, but also tested their personality and charisma. Their missions and challenges ranged from performing to photoshoots.</p>	
-				<p>On July 7, 2015, the final line up of TWICE is revealed. Originally, there were supposed to be seven winners, which consisted of Nayeon, Jeongyeon, Sana, Jihyo, Mina, Dahyun, and Chaeyoung. However, two members were added: Momo, chosen by the <a class="mainp" href="https://en.wikipedia.org/wiki/Park_Jin-young">CEO JYP</a> himself, and Tzuyu, chosen by the voters.</p>
+				<p></p>
 			</div>
 			</div>
 			<h3 class="inoutset">Accomplishments</h3>
