--- a/pages/site.html
+++ b/pages/site.html
@@ -10,7 +10,7 @@
 		<img class="logo" src="images/sasslogo.png" alt="SASS logo">
 		<nav>
 			<ul class="nav__links">
-				<li class="navbar"><a href="site.html"><p class="chosen">Who is TWICE?</p></a></li>
+				<li class="navbar"><a href="site.html"><p class="chosen">SASS!</p></a></li>
 				<li class="navbar"><a href="members.html">The Members</a></li>
 				<li class="navbar"><a href="music.html">The Music</a></li>
 				<li class="navbar"><a href="links.html">More TWICE!</a></li>
